--- a/Travel/Web.config
+++ b/Travel/Web.config
@@ -258,8 +258,8 @@
     </assemblyBinding>
   </runtime>
   <connectionStrings>
-    <!--<add name="TravelDataContext" connectionString="data source=DESKTOP-DFVJ9NF;initial catalog=Travel;persist security info=True;user id=sa;password=ekinmemis123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
-    <add name="TravelDataContext" connectionString="data source=192.168.2.242\SQL2017;initial catalog=Test2;persist security info=True;user id=sa;password=Mm123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="TravelDataContext" connectionString="data source=DESKTOP-DFVJ9NF;initial catalog=Travel;persist security info=True;user id=sa;password=ekinmemis123;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />
+    <!--<add name="TravelDataContext" connectionString="data source=192.168.2.242\SQL2017;initial catalog=Test2;persist security info=True;user id=sa;password=Mm123456;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" />-->
   </connectionStrings>
   <entityFramework>
     <providers>
